--- a/frontend/index.html
+++ b/frontend/index.html
@@ -425,45 +425,51 @@ https://templatemo.com/tm-548-training-studio
           <table align="center">
             <tbody> 
               <tr>
-                <td align="center" colspan="5"><p><b>18/02/2022</b></p></td>
+                <td align="center" colspan="7"><p><b>18/02/2022</b></p></td>
               </tr>
               <tr>
+                <td width="80">&nbsp;</td>
                 <td width="250" align="right">  <p>Casa</p>       </td>
                 <td width="30" align="center">  <p> 5 </p>        </td>
                 <td width="30" align="center">  <p> - </p>        </td>
                 <td width="30" align="center">  <p> 3 </p>        </td>
                 <td width="250" align="left">   <p>Trasferta</p>  </td>
+                <td width="80" align="right"><button>edit</button></td>
               </tr>
               <tr>
-                <td heigh="50" colspan="5">&nbsp;</td>
+                <td heigh="50" colspan="7">&nbsp;</td>
               </tr>
               <!----------------------------------------------------------->
               <tr>
-                <td align="center" colspan="5"><p><b>18/02/2022</b></p></td>
+                <td align="center" colspan="7"><p><b>18/02/2022</b></p></td>
               </tr>
               <tr>
+                <td width="80">&nbsp;</td>
                 <td width="250" align="right">  <p>Casa</p>       </td>
                 <td width="30" align="center">  <p> 5 </p>        </td>
                 <td width="30" align="center">  <p> - </p>        </td>
                 <td width="30" align="center">  <p> 3 </p>        </td>
                 <td width="250" align="left">   <p>Trasferta</p>  </td>
+                <td width="80" align="right"><button>edit</button></td>
               </tr>
               <tr>
-                <td heigh="50" colspan="5">&nbsp;</td>
+                <td heigh="50" colspan="7">&nbsp;</td>
               </tr>
               <!----------------------------------------------------------->
               <tr>
-                <td align="center" colspan="5"><p><b>18/02/2022</b></p></td>
+                <td align="center" colspan="7"><p><b>18/02/2022</b></p></td>
               </tr>
               <tr>
+                <td width="80">&nbsp;</td>
                 <td width="250" align="right">  <p>Casa</p>       </td>
                 <td width="30" align="center">  <p> 5 </p>        </td>
                 <td width="30" align="center">  <p> - </p>        </td>
                 <td width="30" align="center">  <p> 3 </p>        </td>
                 <td width="250" align="left">   <p>Trasferta</p>  </td>
+                <td width="80" align="right"><button>edit</button></td>
               </tr>
               <tr>
-                <td heigh="50" colspan="5">&nbsp;</td>
+                <td heigh="50" colspan="7">&nbsp;</td>
               </tr>
             </tbody>
           </table>
@@ -491,42 +497,48 @@ https://templatemo.com/tm-548-training-studio
         </div>
         
         <div>
-          <table align="center" >
+          <table align="center">
             <tbody> 
               <tr>
-                <td align="center" colspan="3"><p><b>18/02/2022</b></p></td>
+                <td align="center" colspan="5"><p><b>18/02/2022</b></p></td>
               </tr>
               <tr>
+                <td width="80" align="right"><button>insert</button></td>
                 <td width="250" align="right">  <p>Casa</p>       </td>
                 <td width="30" align="center">  <p> - </p>        </td>
                 <td width="250" align="left">   <p>Trasferta</p>  </td>
+                <td width="80">&nbsp;</td>
               </tr>
               <tr>
-                <td heigh="50" colspan="3">&nbsp;</td>
+                <td heigh="50" colspan="5">&nbsp;</td>
               </tr>
               <!----------------------------------------------------------->
               <tr>
-                <td align="center" colspan="3"><p><b>18/02/2022</b></p></td>
+                <td align="center" colspan="5"><p><b>18/02/2022</b></p></td>
               </tr>
               <tr>
+                <td width="80" align="right"><button>insert</button></td>
                 <td width="250" align="right">  <p>Casa</p>       </td>
                 <td width="30" align="center">  <p> - </p>        </td>
                 <td width="250" align="left">   <p>Trasferta</p>  </td>
+                <td width="80">&nbsp;</td>
               </tr>
               <tr>
-                <td heigh="50" colspan="3">&nbsp;</td>
+                <td heigh="50" colspan="5">&nbsp;</td>
               </tr>
               <!----------------------------------------------------------->
               <tr>
-                <td align="center" colspan="3"><p><b>18/02/2022</b></p></td>
+                <td align="center" colspan="5"><p><b>18/02/2022</b></p></td>
               </tr>
               <tr>
+                <td width="80" align="right"><button>insert</button></td>
                 <td width="250" align="right">  <p>Casa</p>       </td>
                 <td width="30" align="center">  <p> - </p>        </td>
                 <td width="250" align="left">   <p>Trasferta</p>  </td>
+                <td width="80">&nbsp;</td>
               </tr>
               <tr>
-                <td heigh="50" colspan="3">&nbsp;</td>
+                <td heigh="50" colspan="5">&nbsp;</td>
               </tr>
             </tbody>
           </table>
