--- a/frontend/index.html
+++ b/frontend/index.html
@@ -584,13 +584,13 @@ https://templatemo.com/tm-548-training-studio
                 <tr>
                   <td width="150"></td>
                   <td width="30"></td>
-                  <td width="150" heigh="50"><div class="riquadracelle"><table><tr><td><p> Vincente 1GA-3M BC </p> </td></tr></table></div></td>         <!-- vincente 1GA vs 3m BC -->
+                  <td width="150" heigh="50"><div class="riquadracelle"><table><tr><td><p> Vincente 1GA-1M3 </p> </td></tr></table></div></td>    <!-- vincente 1GA vs Prima Migliore 3 -->
                   <td width="30"></td>
                   <td width="150"></td>
                   <td width="30"></td>
                   <td width="150"></td>
                   <td width="30"></td>
-                  <td width="150" heigh="50"><div class="riquadracelle"><table><tr><td><p>Vincente 1GC-3M AB</p></td></tr></table></div></td>            <!-- vincente 1GC vs 3m AB -->
+                  <td width="150" heigh="50"><div class="riquadracelle"><table><tr><td><p>Vincente 1GC-2M3</p></td></tr></table></div></td>          <!-- vincente 1GC vs Seconda Migliore 3 -->
                   <td width="30"></td>
                   <td width="150"></td>
                 </tr>
@@ -598,7 +598,7 @@ https://templatemo.com/tm-548-training-studio
                   <td heigh="30"></td>                                                                                                                  <!-- Spazio 2-->
                 </tr>
                 <tr>
-                  <td width="150" heigh="50"><div class="riquadracelle"><table><tr><td><p>TerzaMigliore B/C</p> </td></tr></table></div></td>           <!-- 3m BC -->
+                  <td width="150" heigh="50"><div class="riquadracelle"><table><tr><td><p>1 Migliore 3</p> </td></tr></table></div></td>           <!-- Prima Migliore Terza -->
                   <td width="30"></td>
                   <td width="150"></td>
                   <td width="30"></td>
@@ -608,7 +608,7 @@ https://templatemo.com/tm-548-training-studio
                   <td width="30"></td>  
                   <td width="150"></td>
                   <td width="30"></td>
-                  <td width="150"heigh="50"><div class="riquadracelle"><table><tr><td><p>TerzaMigliore A/B</p> </td></tr></table></div></td>            <!-- 3m AB -->
+                  <td width="150"heigh="50"><div class="riquadracelle"><table><tr><td><p>2 Migliore 3</p> </td></tr></table></div></td>            		<!-- Seconda Migliore Terza -->
                 </tr>
                 <tr>
                   <td heigh="50">&NonBreakingSpace;</td>                                                                                                <!-- Spazio 3-->
@@ -630,7 +630,7 @@ https://templatemo.com/tm-548-training-studio
                   <td heigh="50">&NonBreakingSpace;</td>                                                                                                <!-- Spazio 4-->
                 </tr>
                 <tr>
-                  <td width="150" heigh="50"><div class="riquadracelle"><table><tr><td><p>TerzaMigliore B/C</p> </td></tr></table></div></td>           <!-- 3m BC -->
+                  <td width="150" heigh="50"><div class="riquadracelle"><table><tr><td><p>SecondaGironeC</p> </td></tr></table></div></td>           	<!-- 2GC -->
                   <td width="30"></td>
                   <td width="150"></td>
                   <td width="30"></td>
@@ -648,7 +648,7 @@ https://templatemo.com/tm-548-training-studio
                 <tr>
                   <td width="150"></td>
                   <td width="30"></td>
-                  <td width="160" heigh="50"><div class="riquadracelle"><table><tr><td><p> Vincente 3M BC - 1GB </p> </td></tr></table></div></td>     <!-- vincente 3m BC - 1GB -->
+                  <td width="160" heigh="50"><div class="riquadracelle"><table><tr><td><p> Vincente 2GC - 1GB </p> </td></tr></table></div></td>     <!-- vincente 2GC - 1GB -->
                   <td width="30"></td>
                   <td width="150"></td>
                   <td width="30"></td>
