--- a/frontend/index.html
+++ b/frontend/index.html
@@ -49,16 +49,18 @@ https://templatemo.com/tm-548-training-studio
                 <div class="col-12">
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
-                        <a href="index.html" class="logo">Torneo<em> Unitn</em></a>
+                        <a href="index.html" class="logo">Torneo<em> Calcio a 5</em></a>
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
                             <li class="scroll-to-section"><a href="#top" class="active">Dashboard</a></li>
                             <li class="scroll-to-section"><a href="#classifica">Classifiche</a></li>
                             <li class="scroll-to-section"><a href="#risultati">Risultati</a></li> <!-- to implement-->
-                            <li class="scroll-to-section"><a href="#calendario">Calendario</a></li> <!-- to implement-->
+                            <li class="scroll-to-section"><a href="#calendari">Calendario</a></li> <!-- to implement-->
                             <li class="scroll-to-section"><a href="#tabellone">Tabellone</a></li> <!-- to implement-->
                             <li class="scroll-to-section"><a href="#marcatori">Marcatori</a></li>
+                            <li class="scroll-to-section"><a href="#registrati">Registrati</a></li>
+                            <li class="scroll-to-section"><a href="#calendario">Modifica</a></li> <!-- da modificare link !-->
                             <li class="scroll-to-section"><a href="#login">Log In</a></li>
                         <!--<li class="main-button"><a href="#">Sign Up</a></li> -->
                         </ul>
