adding html pages

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
 
-    <title>Torneo Unitn</title>
+    <title>Torneo</title>
 <!--
 
 Template found on:
@@ -59,13 +59,12 @@ https://templatemo.com/tm-548-training-studio
                             <li class="scroll-to-section"><a href="#calendari">Calendario</a></li> <!-- to implement-->
                             <li class="scroll-to-section"><a href="#tabellone">Tabellone</a></li> <!-- to implement-->
                             <li class="scroll-to-section"><a href="#marcatori">Marcatori</a></li>
-                            <li class="scroll-to-section"><a href="#registrati">Registrati</a></li>
-                            <li class="scroll-to-section"><a href="#calendario">Modifica</a></li> <!-- da modificare link !-->
+                            <li class="scroll-to-section"><a href="modifica.html">Modifica</a></li> <!-- da modificare link !-->
+                            <li class="scroll-to-section"><a href="registrati.html">Registrati</a></li>
                             <li class="scroll-to-section"><a href="#login">Log In</a></li>
-                        <!--<li class="main-button"><a href="#">Sign Up</a></li> -->
                         </ul>
                         <a class='menu-trigger'>
-                            <span>Menu</span>
+                            <span>Menù</span>
                         </a>
                         <!-- ***** Menu End ***** -->
                     </nav>
