registration page added

--- a/frontend/registrati.html
+++ b/frontend/registrati.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="assets/css/ModificaStyle.css">
 
 <body>
-    <!-- Header PAGINA DI MODIFICA -->
+    <!-- Header PAGINA DI REGISTRAZIONE -->
     <section>
         <div class="main-banner" id="top">
             <div class="caption" bgcolour="grey">
