--- a/frontend/index.html
+++ b/frontend/index.html
@@ -59,7 +59,8 @@ https://templatemo.com/tm-548-training-studio
                             <li class="scroll-to-section"><a href="#calendari">Calendario</a></li> <!-- to implement-->
                             <li class="scroll-to-section"><a href="#tabellone">Tabellone</a></li> <!-- to implement-->
                             <li class="scroll-to-section"><a href="#marcatori">Marcatori</a></li>
-                            <li class="scroll-to-section"><a href="modifica.html">Modifica</a></li> <!-- da modificare link !-->
+                            <li class="scroll-to-section"><a href="sostituzione.html">sostituzione</a></li> <!-- da modificare link !-->
+                            <li class="scroll-to-section"><a href="aggiunta.html">Aggiunta</a></li> <!-- da modificare link !-->
                             <li class="scroll-to-section"><a href="registrati.html">Registrati</a></li>
                             <li class="scroll-to-section"><a href="#login">Log In</a></li>
                         </ul>
