--- a/frontend/aggiunta.html
+++ b/frontend/aggiunta.html
@@ -10,13 +10,52 @@
 <link rel="stylesheet" href="assets/css/ModificaStyle.css">
 
 <body>
-    <!-- Header PAGINA DI MODIFICA -->
+    <!-- Header PAGINA DI AGGIUNTA -->
+
     <section>
         <div class="main-banner" id="top">
             <div class="caption" bgcolour="grey">
-               <h2>Pagina <em>di Aggiunta</em></h2>
+               <h2>Pagina <em> di Aggiunta</em></h2>
             </div>
         </div>
     </section>
+
+    <!-- Sezione Dati -->
+    <section class="body-form">
+        <div class="container">
+            <div class="form-type">
+                <em>Inserire i dati del Giocatore da Aggiungere completando tutti i campi.</em>
+                <br>
+                <form>
+                    <label for="fname" >Nome: *</label><br>
+                    <input type="text" id="fname" name="fname" required><br><br>
+                    <label for="lname" >Cognome: *</label><br>
+                    <input type="text" id="lname" name="lname" required><br><br>
+                    <label for="cf" >Codice Fiscale: *</label><br>
+                    <input type="text" id="cf" name="cf" required>  Non te lo ricordi? <a href="http://www.codicefiscaleonline.com/">Clicca qui</a><br><br>
+                    <label for="mail">Email (Google): *</label><br>
+                    <input type="email" id="mail" name="mail" pattern=".+@gmail\.com" size="30" required><br><br><br>
+                    <input type="checkbox" id="privacy" name="privacy" value="privacy" required>
+                    <label for="privacy">Dichiaro di aver letto l'<a target="_blank" href="#">informativa sulla privacy</a> ai sensi del GDPR e do il consenso al trattamento dei dati personali.</label><br>
+                    <input type="submit" value="Submit"><br> 
+                </form>
+            </div>
+        </div>
+    <br>
+    &nbsp;
+    <br>
+    </section>
+
+   <!-- Sezione selezione -->
+   <section>
+        <div style="width:800px; margin:0 auto;">Vuoi sostituire un giocatore?<a href="sostituzione.html">Clicca qui</a></div>
+    </section>
+
+    <!-- Footer bottone HOME -->
+    <div class="footer">
+        <div class="button-home">
+            <button type="submit" onclick="location.href='index.html'">HOME</button>
+        </div>
+    </div>
 </body>
 </html>
