--- a/frontend/registrati.html
+++ b/frontend/registrati.html
@@ -19,6 +19,9 @@
                <h2>Pagina <em> di Registrazione</em></h2>
             </div>
         </div>
+        <ul>
+            <li><a href="registratiMAF.html">Registra MAF</a></li>
+        </ul>
     </section>
 </body>
 </html>
