Added MAF login route

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -62,7 +62,7 @@ https://templatemo.com/tm-548-training-studio
                             <li class="scroll-to-section"><a href="sostituzione.html">sostituzione</a></li> <!-- da modificare link !-->
                             <li class="scroll-to-section"><a href="aggiunta.html">Aggiunta</a></li> <!-- da modificare link !-->
                             <li class="scroll-to-section"><a href="registrati.html">Registrati</a></li>
-                            <li class="scroll-to-section"><a href="#login">Log In</a></li>
+                            <li class="scroll-to-section"><a href="login.html">Log In</a></li>
                         </ul>
                         <a class='menu-trigger'>
                             <span>Menù</span>
