Added registrazione arbitro frontend

--- a/frontend/registrati.html
+++ b/frontend/registrati.html
@@ -21,6 +21,7 @@
         </div>
         <ul>
             <li><a href="registratiMAF.html">Registra MAF</a></li>
+            <li><a href="registratiArbitro.html">Registra Arbitro</a></li>
         </ul>
     </section>
 </body>
