--- a/frontend/registrati.html
+++ b/frontend/registrati.html
@@ -22,6 +22,7 @@
         <ul>
             <li><a href="registratiMAF.html">Registra MAF</a></li>
             <li><a href="registratiArbitro.html">Registra Arbitro</a></li>
+            <li><a href="iscriviSquadra.html">Iscrizione Squadra</a></li>
         </ul>
     </section>
 </body>
