--- a/frontend/index.html
+++ b/frontend/index.html
@@ -62,7 +62,13 @@ https://templatemo.com/tm-548-training-studio
                             <li class="scroll-to-section"><a href="sostituzione.html">sostituzione</a></li> <!-- da modificare link !-->
                             <li class="scroll-to-section"><a href="aggiunta.html">Aggiunta</a></li> <!-- da modificare link !-->
                             <li class="scroll-to-section"><a href="registrati.html">Registrati</a></li>
-                            <li class="scroll-to-section"><a href="login.html">Log In</a></li>
+                            <li class="scroll-to-section">
+                              <a>Log In</a>
+                              <ul>
+                                <li class="activate"><a href="loginARB.html">Log In Arbitro</a></li>
+                                <li class="activate"><a href="loginGIO.html">Log In Giocatore</a></li>
+                              </ul>
+                            </li>
                         </ul>
                         <a class='menu-trigger'>
                             <span>Menù</span>
