--- a/frontend/index.html
+++ b/frontend/index.html
@@ -63,7 +63,7 @@ https://templatemo.com/tm-548-training-studio
                             <li class="scroll-to-section"><a href="aggiunta.html">Aggiunta</a></li> <!-- da modificare link !-->
                             <li class="scroll-to-section"><a href="registrati.html">Registrati</a></li>
                             <li class="scroll-to-section">
-                              <a>Log In</a>
+                              <a class="submenu">Log In</a>
                               <ul>
                                 <li class="activate"><a href="loginARB.html">Log In Arbitro</a></li>
                                 <li class="activate"><a href="loginGIO.html">Log In Giocatore</a></li>
