--- a/frontend/registrati.html
+++ b/frontend/registrati.html
@@ -25,5 +25,11 @@
             <li><a href="iscriviSquadra.html">Iscrizione Squadra</a></li>
         </ul>
     </section>
+<!-- Footer bottone HOME -->
+<div class="footer">
+    <div class="button-home">
+        <button type="submit" onclick="location.href='index.html'">HOME</button>
+    </div>
+</div>
 </body>
 </html>
