2nd fix frontend

--- a/frontend/iscriviSquadra.html
+++ b/frontend/iscriviSquadra.html
@@ -9,73 +9,108 @@
 </head>
 
 <script>
-  var numPlayers, teamName, currentPlayer;    // global variables
-  var playersArray = [];
-
-  function memSquad(){
-    numPlayers = document.getElementById("numPlayers").value;
-    teamName = document.getElementById("TeName").value;
-
-    console.log("PRINT_1", "Team: ", teamName, "  Players: ", numPlayers);  /* DEBUGTEST */
-
-    document.getElementById("formSquadraContainer").style.display = "none";
-    document.getElementById("formmyformContainer").style.display = "block";
-
-    currentPlayer = 0;
-
-    playersArray.length = numPlayers;
-
-    trackProgress();
-  }
-
-  function trackProgress(){
-      // console.log("PRINT_2", "Team: ", teamName, "  Players: ", numPlayers);  /* DEBUGTEST */
-      document.getElementById("progressStatus").innerHTML = "You are editing player ";
-      document.getElementById("progressStatus").innerHTML += currentPlayer+1;
-      document.getElementById("progressStatus").innerHTML += " out of ";
-      document.getElementById("progressStatus").innerHTML += numPlayers;
-  }
-
-  function clearPlayerForm(){
-      console.log(" ---  Clearing form --- "); /* DEBUGTEST */
-
-      fname = document.getElementById("fname").value = '';
-      lname = document.getElementById("lname").value = '';
-      cf = document.getElementById("cf").value = '';
-      email = document.getElementById("email").value = '';
-      privacy = document.getElementById("privacy").checked = false;
-  }
-
-  function memPlayer(){
-    var fname = document.getElementById("fname").value;
-    var lname = document.getElementById("lname").value;
-    var cf = document.getElementById("cf").value;
-    var email = document.getElementById("email").value;
-    var privacy = document.getElementById("privacy").checked;
-
-    console.log("PRINT_3", "N: ", fname, " C: ", lname, " cf: ", cf, " email: ", email, " privacy: ", privacy);  /* DEBUGTEST */
-
-    playersArray[currentPlayer] = new Array(fname, lname, cf, email, privacy);
-
-    currentPlayer++;
-    trackProgress();
-    clearPlayerForm();
-
-    if(currentPlayer == numPlayers){
-      endForm();
+  
+    window.onkeypress = function(event) {  // memsquad() memplayer()
+        if (event.keyCode == 13) {
+            if(teamName && numPlayers){
+                memPlayer();
+            } else {
+                memSquad();
+            }
+            return false;
+        }
     }
-  }
 
-  function endForm(){
-      console.log("Array length:", playersArray.length);
-      console.log(" --- BEGIN ARRAY PRINT ---");  /* DEBUGTEST */
-      for(i=0; i<numPlayers; i++)
-          console.log(playersArray[i][0] , " " , playersArray[i][1] , " " , playersArray[i][2] , " " , playersArray[i][3] , " " , playersArray[i][4]);  /* DEBUGTEST */
-      console.log(" --- END ARRAY PRINT ---");  /* DEBUGTEST */
+    var numPlayers, teamName, currentPlayer;    // global variables
+    var playersArray = [];
 
+    function memSquad(){
 
-      document.getElementById("formmyformContainer").style.display = "none";
-      document.getElementById("endFormContainer").style.display = "block";
+        if(!(document.getElementById("numPlayers").value && document.getElementById("TeName").value)){
+            document.getElementById("TeNameError").classList.remove("noterror");
+            document.getElementById("TeNameError").classList.add("error");
+            return null;
+        }
+
+        numPlayers = document.getElementById("numPlayers").value;
+        teamName = document.getElementById("TeName").value;
+
+        console.log("PRINT_1", "Team: ", teamName, "  Players: ", numPlayers);  /* DEBUGTEST */
+
+        document.getElementById("formSquadraContainer").style.display = "none";
+        document.getElementById("formmyformContainer").style.display = "block";
+
+        currentPlayer = 0;
+
+        playersArray.length = numPlayers;
+
+        trackProgress();
+    }
+
+    function trackProgress(){
+        // console.log("PRINT_2", "Team: ", teamName, "  Players: ", numPlayers);  /* DEBUGTEST */
+        document.getElementById("progressStatus").innerHTML = "You are editing player ";
+        document.getElementById("progressStatus").innerHTML += currentPlayer+1;
+        document.getElementById("progressStatus").innerHTML += " out of ";
+        document.getElementById("progressStatus").innerHTML += numPlayers;
+    }
+
+    function clearPlayerForm(){
+        console.log(" ---  Clearing form --- "); /* DEBUGTEST */
+
+        fname = document.getElementById("fname").value = '';
+        lname = document.getElementById("lname").value = '';
+        cf = document.getElementById("cf").value = '';
+        email = document.getElementById("email").value = '';
+        privacy = document.getElementById("privacy").checked = false;
+    }
+
+    function memPlayer(){
+        var fname = document.getElementById("fname").value;
+        var lname = document.getElementById("lname").value;
+        var cf = document.getElementById("cf").value;
+        var email = document.getElementById("email").value;
+        var privacy = document.getElementById("privacy").checked;
+
+        console.log("PRINT_3", "N: ", fname, " C: ", lname, " cf: ", cf, " email: ", email, " privacy: ", privacy);  /* DEBUGTEST */
+
+        playersArray[currentPlayer] = new Array(fname, lname, cf, email, privacy);
+
+        currentPlayer++;
+        trackProgress();
+        clearPlayerForm();
+
+        if(currentPlayer == numPlayers){
+            endForm();
+        }
+    }
+
+    function endForm(){
+    console.log("Array length:", playersArray.length);
+    console.log(" --- BEGIN ARRAY PRINT ---");  /* DEBUGTEST */
+    for(i=0; i<numPlayers; i++)
+        console.log(playersArray[i][0] , " " , playersArray[i][1] , " " , playersArray[i][2] , " " , playersArray[i][3] , " " , playersArray[i][4]);  /* DEBUGTEST */
+    console.log(" --- END ARRAY PRINT ---");  /* DEBUGTEST */
+
+    document.getElementById("endFormContainer").innerHTML += "<br />\nI giocatori della squadra [";
+    document.getElementById("endFormContainer").innerHTML += teamName;
+    document.getElementById("endFormContainer").innerHTML += "] che hai inserito sono: <br /> \n";
+    for(i=0; i<numPlayers; i++){
+        document.getElementById("endFormContainer").innerHTML += playersArray[i][0]; //nome
+        document.getElementById("endFormContainer").innerHTML += " ";
+        document.getElementById("endFormContainer").innerHTML += playersArray[i][1]; //cognome
+        document.getElementById("endFormContainer").innerHTML += " ";
+        document.getElementById("endFormContainer").innerHTML += playersArray[i][2]; //CF
+        document.getElementById("endFormContainer").innerHTML += " ";
+        document.getElementById("endFormContainer").innerHTML += playersArray[i][3]; //mail
+        document.getElementById("endFormContainer").innerHTML += " ";
+        document.getElementById("endFormContainer").innerHTML += playersArray[i][4]; //privacy
+        document.getElementById("endFormContainer").innerHTML += " <br /> \n";
+    }
+      
+
+    document.getElementById("formmyformContainer").style.display = "none";
+    document.getElementById("endFormContainer").style.display = "block";
   }
 
 
@@ -103,7 +138,8 @@
                 <br>
                 <form id="formSquadra">
                     <label for="TeName" >Nome Squadra: *</label><br>
-                    <input type="text" id="TeName" name="TeamName" required><br><br>
+                    <input type="text" id="TeName" name="TeamName" required><br />
+                    <span id="TeNameError" class="noterror">Campo richiesto</span><br /><br />
                     <label for="numPlayers" >Numero Giocatori da Iscrivere: *</label><br>
                     <select id="numPlayers" name="numberOfPlayers" form="formSquadra" required><br><br>
                         <option value="2">2</option>  /* DEBUGTEST */
@@ -146,7 +182,7 @@
             </div>
         </div>
         <div class="container" id="endFormContainer" style="display:none;">
-          Fine del form, clicca qui per inserire un'altra squadra
+          Fine dell'inserimento squadra.
         </div>
     <br>
     &nbsp;
@@ -156,7 +192,7 @@
     <!-- Script jquery
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script>
-        const apiUrl = "http://localhost:3000/api/v1/arbitro"
+        const apiUrl = "http://localhost:3000/api/v1/squadra"
 
         $(document).ready(function() {
             $("#myform").submit(function(e) {
@@ -165,8 +201,6 @@
                     cognome = $("#lname").val(),
                     codiceFiscale = $("#cf").val(),
                     email = $("#email").val(),
-                    sezione = $("#sezione").val(),
-                    codicePatentino = $("#codicePatentino").val();
 
                 $.ajax({
                     url: apiUrl,
@@ -174,21 +208,19 @@
                     data: {
                         nome,
                         cognome,
-                        email,
                         codiceFiscale,
-                        sezione,
-                        codicePatentino
+                        email
                     }
                 })
                 .done(function(res) {
-                    alert("Arbitro salvato correttamente");
+                    alert("Giocatori Salvati correttamente");
                 })
                 .fail(function(result) {
                     let response = result.responseJSON
                     if (response.error) {
                         alert(response.error);
                     } else {
-                        alert("Errore nella registrazione dell'arbitro")
+                        alert("Errore nella registrazione della squadra")
                     }
                 })
             })
